--- a/spaces-frontend/src/Home.css
+++ b/spaces-frontend/src/Home.css
@@ -1,13 +1,13 @@
-.App {
+.Home {
   text-align: center;
 }
 
-.App-logo {
+.Home-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-.App-header {
+.Home-header {
   background-color: white;
   min-height: 100vh;
   display: flex;
@@ -15,9 +15,9 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #333;
 }
 
-.App-link {
+.Home-link {
   color: #61dafb;
 }
