--- a/spaces-frontend/src/Home.css
+++ b/spaces-frontend/src/Home.css
@@ -9,7 +9,7 @@
 
 .Home-header {
   background-color: white;
-  min-height: 100vh;
+  min-height: calc(100vh - 8em);
   display: flex;
   flex-direction: column;
   align-items: center;
