Renames 'name' to 'organizationName'

--- a/backend/views/account/profile.pug
+++ b/backend/views/account/profile.pug
@@ -12,13 +12,13 @@ block content
       .col-sm-7
         input.form-control(type='email', name='email', id='email', value=user.email)
     .form-group.row.justify-content-md-center
-      label.col-sm-3.col-form-label.text-right.font-weight-bold(for='name') Name
+      label.col-sm-3.col-form-label.text-right.font-weight-bold(for='organizationName') Organization Name
       .col-sm-7
-        input.form-control(type='text', name='name', id='name', value=user.profile.name)
     .form-group.row.justify-content-md-center
       label.col-sm-3.col-form-label.text-right.font-weight-bold(for='location') Location
       .col-sm-7
         input.form-control(type='text', name='location', id='location', value=user.profile.location)
+        input.form-control(type='text', name='organizationName', id='organizationName', value=user.profile.organizationName)
     .form-group.row.justify-content-md-center
       label.col-sm-3.col-form-label.text-right.font-weight-bold(for='website') Website
       .col-sm-7
@@ -26,7 +26,7 @@ block content
     .form-group.row.justify-content-md-center
       label.col-sm-3.col-form-label.text-right.font-weight-bold Gravatar
       .col-sm-7
-        img(src=user.gravatar(), class='profile', width='100', height='100', alt=((user.profile.name || user.email || user.id)))
+        img(src=user.gravatar(), class='profile', width='100', height='100', alt=((user.profile.organizationName || user.email || user.id)))
     .form-group.row.justify-content-md-center
       .col-sm-4
         button.btn.btn.btn-primary(type='submit')
