Allows storing profile through API and uses same field names as client

--- a/backend/views/account/profile.pug
+++ b/backend/views/account/profile.pug
@@ -16,9 +16,9 @@ block content
       .col-sm-7
         input.form-control(type='text', name='organizationName', id='organizationName', value=user.profile.organizationName)
     .form-group.row.justify-content-md-center
-      label.col-sm-3.col-form-label.text-right.font-weight-bold(for='website') Website
+      label.col-sm-3.col-form-label.text-right.font-weight-bold(for='organizationUrl') Organization URL
       .col-sm-7
-        input.form-control(type='text', name='website', id='website', value=user.profile.website)
+        input.form-control(type='text', name='organizationUrl', id='organizationUrl', value=user.profile.organizationUrl)
     .form-group.row.justify-content-md-center
       label.col-sm-3.col-form-label.text-right.font-weight-bold(for='phone') Phone
       .col-sm-7
