--- a/backend/views/account/profile.pug
+++ b/backend/views/account/profile.pug
@@ -24,6 +24,10 @@ block content
       .col-sm-7
         input.form-control(type='text', name='phone', id='phone', value=user.profile.phone)
     .form-group.row.justify-content-md-center
+      label.col-sm-3.col-form-label.text-right.font-weight-bold Logo
+      .col-sm-7
+        img(src=user.profile.logo, class='profile', height='100', alt=((user.profile.organizationName || user.email || user.id)))
+    .form-group.row.justify-content-md-center
       label.col-sm-3.col-form-label.text-right.font-weight-bold Gravatar
       .col-sm-7
         img(src=user.gravatar(), class='profile', width='100', height='100', alt=((user.profile.organizationName || user.email || user.id)))
