--- a/backend/views/partials/header.pug
+++ b/backend/views/partials/header.pug
@@ -22,8 +22,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top
         else
           li.nav-item.dropdown(class=(title === 'Account Management') ? 'active' : undefined)
             a.nav-link.dropdown-toggle(href='#', data-toggle='dropdown')
-              if user.profile.picture
-                img(src=user.profile.picture, alt=(user.profile.name || user.email || user.id))
+              if user.profile.logo
+                img(src=user.profile.logo, alt=(user.profile.name || user.email || user.id))
               else
                 img(src=user.gravatar(60), alt=(user.profile.name || user.email || user.id))
               span= user.profile.name || user.email || user.id
